Fix search field appearance on Safari
Safari needs the appearance to be reset on search fields

--- a/app/assets/stylesheets/modules/search_field.styl
+++ b/app/assets/stylesheets/modules/search_field.styl
@@ -12,6 +12,7 @@
     border-top-right-radius: 0
     border-bottom-right-radius: 0
     border-right-width: 0
+    -webkit-appearance: none
   .form-control::-webkit-search-cancel-button
     -webkit-appearance: none
   .form-control::-webkit-search-cancel-button::after
